# JSON-mapping-plugin

./: .clang-format  .clang-tidy  .gitignore  404.html  CMakeLists.txt  LICENSE  README.md  index.html  mkdocs.yml
.github/workflows/: pages.yml
DRaFT_data_reader/: CMakeLists.txt  DRaFT_data_reader.cfg.in  DRaFT_data_reader.cpp  DRaFT_data_reader.h
JSON_mapping_plugin/: CMakeLists.txt  JSON_mapping_plugin.cpp  JSON_mapping_plugin.h
JSON_mapping_plugin/config/: json_mapping.cfg.in
JSON_mapping_plugin/configs/: json_mapping.cfg.in
JSON_mapping_plugin/etc/: module.in
JSON_mapping_plugin/include/: uda_plugin_helpers.hpp
JSON_mapping_plugin/src/: tmp.cpp  tmp.hpp
JSON_mapping_plugin/src/handlers/: mapping_handler.cpp  mapping_handler.hpp
JSON_mapping_plugin/src/helpers/: DRaFT_plugin_helpers.hpp  scale_offset.cpp  uda_plugin_helpers.cpp  uda_plugin_helpers.hpp
JSON_mapping_plugin/src/map_types/: base_entry.cpp  base_entry.hpp  base_mapping.hpp  custom_entry.cpp  custom_entry.hpp  custom_mapping.cpp  custom_mapping.hpp  dim_entry.cpp  dim_entry.hpp  dim_mapping.cpp  dim_mapping.hpp  expr_entry.cpp  expr_entry.hpp  expr_mapping.cpp  expr_mapping.hpp  map_arguments.hpp  map_entry.cpp  map_entry.hpp  offset_entry.cpp  offset_entry.hpp  plugin_mapping.cpp  plugin_mapping.hpp  scale_entry.cpp  scale_entry.hpp  slice_entry.cpp  slice_entry.hpp  slice_mapping.cpp  slice_mapping.hpp  value_mapping.cpp  value_mapping.hpp
JSON_mapping_plugin/src/utils/: DRaFT_plugin_helpers.hpp  print_uda_structs.hpp  ram_cache.cpp  ram_cache.hpp  scale_offset.cpp  scale_offset.hpp  subset.cpp  subset.hpp  uda_plugin_helpers.cpp  uda_plugin_helpers.hpp  uda_type_sizes.hpp
JSON_mapping_plugin/test/: CMakeLists.txt
JSON_mapping_plugin/test/src/: tmp_test.cpp
cmake/: SourcesAndHeaders.cmake  StandardSettings.cmake  Utils.cmake  plugins.cmake
cmake/Modules/: FindIMAS.cmake  FindITERMD.cmake  FindTIRPC.cmake  FindUDA.cmake
docs/: index.md
scripts/: activate-plugins.sh.in  cmake-adam.sh  remove-plugins.sh.in
search/: search_index.json
src/: tmp.cpp
test/: CMakeLists.txt
test/src/: tmp_test.cpp
